config_v2/old_version/keycloak.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: foo
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "keycloak.keycloak.svc.cluster.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: foo
  name: keycloak-vsvc
spec:
  hosts:
  - "keycloak.keycloak.svc.cluster.local"
  gateways:
  - keycloak-gateway
  http:
  - match:
    - uri:
        prefix: /realms
    route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
        port:
          number: 8080
